# FinancialMarketLevels

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: defaults.yaml
src/financial_market_levels/: cli.py  config.py  runner.py  secrets.py  vault.py
src/financial_market_levels/analysis/: clustering.py  levels.py  pivots.py  swings.py
src/financial_market_levels/market_data/: yahoo.py
src/financial_market_levels/reporting/: charts.py
src/financial_market_levels/source_db/: reader.py
src/financial_market_levels/storage/: db.py  repository.py
src/financial_market_levels/web/: app.py
src/financial_market_levels/web/static/: app.css
src/financial_market_levels/web/templates/: base.html  dashboard.html  run_detail.html  runs.html  secrets.html  settings.html  ticker_detail.html
tests/: conftest.py  test_charts.py  test_cli.py  test_clustering.py  test_config.py  test_levels_orchestrator.py  test_market_data.py  test_pivots.py  test_repository.py  test_runner.py  test_source_db_reader.py  test_swings.py  test_web.py
