[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-market-levels"
version = "0.1.0"
description = "Support/resistance level finder for trending tickers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1",
    "matplotlib>=3.10",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2",
    "numpy>=2.0",
    "PyYAML>=6.0",
    "requests>=2.32",
    "tzdata>=2024.2",
    "yfinance>=0.2.66",
    "hvac>=2.3",
]

[project.scripts]
financial-market-levels = "financial_market_levels.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
financial_market_levels = ["web/templates/*.html", "web/static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
